--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.11.1",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.0",
     "next": "latest",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
